--- a/app/views/application/_menu_lat.html.erb
+++ b/app/views/application/_menu_lat.html.erb
@@ -130,12 +130,12 @@
         </ul>
       </div>
     </li>
-    <li class="list-group-item">
+    <!-- <li class="list-group-item">
       <%= link_to faq_path do %>
       <span class="fa pficon-help" data-toggle="tooltip" title="FAQ"></span>
       <span class="list-group-item-value">FAQ</span>
       <% end %>
-    </li>
+    </li> -->
     <li class="list-group-item secondary-nav-item-pf" data-target="#settings-secondary">
       <a>
         <span class="glyphicon glyphicon-cog" data-toggle="tooltip" title="Settings"></span>
