--- a/app/assets/stylesheets/registration.scss
+++ b/app/assets/stylesheets/registration.scss
@@ -2,6 +2,8 @@
   padding: 1em;
   margin-top: 1em;
   box-shadow: 0 0 2px rgba(3, 3, 3, 0.175);
+  border:1px solid #0088ce;
+  
   cursor:pointer;
   input[type="radio"]{
     display: none;
